package enums;

public enum UnitOfMeasure {
    METERS,
    CENTIMETERS,
    SQUARE_METERS,
    PCS;
}
