@startuml
class InnerClasses.Person {
- String name
- String passportID
- EyeColor eyeColor
- HairColor hairColor
- Country nationality
+ boolean setName(String)
+ void setEyeColor(EyeColor)
+ void setHairColor(HairColor)
+ void setNationality(Country)
+ boolean setPassportID(String)
+ String getName()
+ Country getNationality()
+ EyeColor getEyeColor()
+ HairColor getHairColor()
+ String getPassportID()
}
class Commands.Info {
+ {static} Info INFO
+ void execute()
}
class MainClasses.Main {
+ {static} void main(String[])
}
class Commands.Add {
+ {static} Add ADD
+ void execute()
}
class Commands.Remove {
+ {static} Remove REMOVE
+ void executeWithParameters(String[])
}
class Commands.Execute_script {
+ {static} Execute_script EXECUTE_SCRIPT
+ void executeWithParameters(String[])
}
class Commands.Save {
+ {static} Save SAVE
+ void execute()
}
class Commands.Help {
+ {static} Help HELP
+ void execute()
}
interface Commands.Command {
~ void execute()
~ void executeWithParameters(String[])
}
class InnerClasses.Month {
- {static} HashMap<String,String> mounths
+ {static} String getMounthTranslation(String)
}
class InnerClasses.Coordinates {
- double x
- Float y
+ boolean setX(double)
+ boolean setY(Float)
+ double getX()
+ Float getY()
+ String toString()
}
class MainClasses.Product {
+ {static} long countOfProducts
+ {static} ArrayList<Long> ID
- long id
- String name
- Coordinates coordinates
- java.time.ZonedDateTime creationDate
- Float price
- UnitOfMeasure unitOfMeasure
- Person owner
+ int compareTo(Product)
+ String toString()
+ boolean setName(String)
+ void setCoordinates(Coordinates)
+ void setOwner(Person)
+ boolean setPrice(Float)
+ void setUnitOfMeasure(UnitOfMeasure)
+ long getId()
+ ZonedDateTime getCreationDate()
+ {static} long getCountOfProducts()
+ UnitOfMeasure getUnitOfMeasure()
+ Coordinates getCoordinates()
+ {static} ArrayList<Long> getID()
+ Float getPrice()
+ String getName()
+ Person getOwner()
+ {static} Product createProduct(Long)
}
enum enums.Country {
+  UNITED_KINGDOM
+  USA
+  SPAIN
+  ITALY
+  NORTH_KOREA
}
class MainClasses.ProductCollection {
+ {static} ProductCollection PRODUCT_COLLECTION
- LinkedHashSet<Product> products
- Map<Long,Product> productID
- Date data
+ LinkedHashSet<Product> getProducts()
+ Map<Long,Product> getProductID()
+ void addProduct(Collection<Product>)
+ void addProduct(Product)
+ void removeProduct(long)
+ Date getData()
+ int getLen()
+ void clearCollection()
}
class Commands.Show {
+ {static} Show SHOW
+ void execute()
}
class Commands.Update {
+ {static} Update UPDATE
+ void executeWithParameters(String[])
}
enum enums.UnitOfMeasure {
+  KILOGRAMS
+  SQUARE_METERS
+  GRAMS
}
class MainClasses.Test {
+ {static} void main(String[])
}
enum enums.HairColor {
+  GREEN
+  BLACK
+  ORANGE
+  WHITE
}
enum enums.EyeColor {
+  GREEN
+  WHITE
+  BROWN
}
class Commands.Clear {
+ {static} Clear CLEAR
+ void execute()
}


Commands.Command <|.. Commands.Info
Commands.Command <|.. Commands.Add
Commands.Command <|.. Commands.Remove
Commands.Command <|.. Commands.Execute_script
Commands.Command <|.. Commands.Save
Commands.Command <|.. Commands.Help
MainClasses.Comparable <|.. MainClasses.Product
Commands.Command <|.. Commands.Show
Commands.Command <|.. Commands.Update
Commands.Command <|.. Commands.Clear
@enduml